[tool.poetry]
name = "digits-py-lib"
version = "1.0.2"
license = "MIT"
description = "export ten first numbers"
authors = ["thomas-marquis <thomas.marquis314@gmail.com>"]
readme = "README.md"
packages = [
    {include = "digits"}
]
repository = "https://github.com/thomas-marquis/digits-py-lib"
homepage = "https://github.com/thomas-marquis/digits-py-lib"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
